--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sample HTML Page</title>
+        <meta name="description" content="Portfolio">
+        <title>||DFaison Portfolio</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
         <script src="logic.js"></script>
     </head>
     <body>
-        
+        <!--Hamburger Menu-->
+        <a> <i class="fa fa-bars"></i></a>
     </body>
+    <!--Resources:-->
+    <!--Icons:-->
+    <!--https://fontawesome.com/icons-->
 </html>
