--- a/index.html
+++ b/index.html
@@ -12,8 +12,120 @@
     <body>
         <!--Hamburger Menu-->
         <a> <i class="fa fa-bars"></i></a>
+        <!--Hero Section-->
+        <section class="heroSection">
+
+            <div class="heroLeftText">
+                <h2>Hello, Hello~ My name is</h2>
+                <h1>Midas</h1>
+                <h3>I am a Software Developer, 3D Designer, Inspiring Game Developer
+                    and overall creative mind
+                </h3>
+            </div>
+
+            <nav class="menu">
+                <h2 class="menuTitle"> Main Menu</h2>
+                <a href="#aboutSection" class="menuBtn">About</a>
+                <a href="#softwareProjects" class="menuBtn">Software Projects</a>
+                <a href="#3Dprojects" class="menuBtn">3D Projects</a>
+                <a href="#gameDevelopment" class="menuBtn">Game Development</a>
+                <a href="#contact" class="menuBtn">Contact</a>
+            </nav>
+        </section><!--End of Hero Section-->
+
+        <!--About Section-->
+        <section class="content" id="aboutSection">
+            <h3>About Me</h3>
+            <p></p>
+            <!--Tool Container-->
+            <h3>Tool Box</h3>
+            <div class="toolContainer">
+                <!--Software Dev Tools-->
+                <div class="softwareDevTools">
+                    <h4>Software Development Tools</h4>
+                    <img src="Images/Apache Maven.png" alt="Apache Maven" class="toolImg">
+                    <img src="Images/Apache Tomcat.png" alt="" class="toolImg">
+                    <img src="Images/Apache.png" alt="" class="toolImg">
+                    <img src="Images/C# (CSharp).png" alt="" class="toolImg">
+                    <img src="Images/CSS3.png" alt="" class="toolImg">
+                    <img src="Images/Django.png" alt="" class="toolImg">
+                    <img src="Images/GitHub.png" alt="" class="toolImg">
+                    <img src="Images/HTML5.png" alt="" class="toolImg">
+                    <img src="Images/Java.png" alt="" class="toolImg">
+                    <img src="Images/JavaScript.png" alt="" class="toolImg">
+                    <img src="Images/JSON.png" alt="" class="toolImg">
+                    <img src="Images/Matplotlib.png" alt="" class="toolImg">
+                    <img src="Images/MySQL.png" alt="" class="toolImg">
+                    <img src="Images/PHP.png" alt="" class="toolImg">
+                    <img src="Images/Python.png" alt="" class="toolImg">
+                    <img src="Images/Read the Docs.png" alt="" class="toolImg">
+                    <img src="Images/SQLite.png" alt="" class="toolImg">
+                    <img src="Images/Visual Studio Code (VS Code).png" alt="" class="toolImg">
+                    <img src="Images/Visual Studio.png" alt="" class="toolImg">
+                </div>
+                <!--Artist Tools-->
+                <div class="artistTools">
+                    <h4>Artist Tools</h4>
+                    <img src="Images/Adobe Illustrator.png" alt="" class="toolImg">
+                    <img src="Images/Adobe Photoshop.png" alt="" class="toolImg">
+                    <img src="Images/Blender.png" alt="" class="toolImg">
+                    <img src="Images/Canva.png" alt="" class="toolImg">
+                    <img src="Images/Figma.png" alt="" class="toolImg">
+                </div>
+                <!--Game Dev Tools-->
+                <div class="gameDevTools">
+                    <h4>Game Development Tools</h4>
+                    <img src="Images/Godot Engine.png" alt="" class="toolImg">
+                    <img src="Images/Unity.png" alt="" class="toolImg">
+                    <img src="Images/Unreal Engine.png" alt="" class="toolImg">
+                    <img src="Images/pygame_logo.png" alt="" class="toolImg">
+                </div>
+            </div>
+        </section>
+        <!--Software Section-->
+        <section class="content" id="softwareProjects">
+            <h3>Software Projects</h3>
+            
+            <div class="projectContainer">
+                <!--Project Item 1-->
+                <div class="projectItem">
+                    <h4>Project Title</h4>
+                    <p>Project Description</p>
+                    <div>
+                        <p>Tools Used:</p>
+                    </div>
+                    <!--Slide Show of Project-->
+                    <div class="slideShowContainer">
+                        <!--Previous Button-->
+                        <button class="prevBtn"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></button>
+                        <!--Slide 1-->
+                        <div class="individualSlide">
+                            <img src="" alt="" class="slideShowImage">
+                            <caption class="slideShowImageCaption"></caption>
+                        </div>
+                        <!--Slide 2-->
+                        <div class="individualSlide">
+                            <img src="" alt="" class="slideShowImage">
+                            <caption class="slideShowImageCaption"></caption>
+                        </div>
+                        <!--Slide 3-->
+                        <div class="individualSlide">
+                            <img src="" alt="" class="slideShowImage">
+                            <caption class="slideShowImageCaption"></caption>
+                        </div>
+                        <!--Next Button-->
+                        <button class="nextBtn"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
+                    </div><!--End of slide show container-->
+
+                </div><!--End of Project Item-->
+
+            </div><!--End of Project Container-->
+        </section>
     </body>
     <!--Resources:-->
     <!--Icons:-->
     <!--https://fontawesome.com/icons-->
+
+    <!--Software Tech Icons:-->
+    <!--https://techicons.dev/-->
 </html>
