--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Portfolio">
-        <title>||DFaison Portfolio</title>
+        <title>|| DFaison Portfolio ||</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Knewave&display=swap');
+        </style>
         <link rel="stylesheet" href="styles.css">
         <script src="logic.js"></script>
     </head>
@@ -17,7 +20,7 @@
 
             <div class="heroLeftText">
                 <h2>Hello, Hello~ My name is</h2>
-                <h1>Midas</h1>
+                <h1 class="knewave-regular logo">Midas</h1>
                 <h3>I am a Software Developer, 3D Designer, Inspiring Game Developer
                     and overall creative mind
                 </h3>
@@ -46,7 +49,7 @@
                     <img src="Images/Apache Maven.png" alt="Apache Maven" class="toolImg">
                     <img src="Images/Apache Tomcat.png" alt="" class="toolImg">
                     <img src="Images/Apache.png" alt="" class="toolImg">
-                    <img src="Images/C# (CSharp).png" alt="" class="toolImg">
+                    <img src="Images/Apache_NetBeans_Logo.svg.png" alt="" class="toolImg">
                     <img src="Images/CSS3.png" alt="" class="toolImg">
                     <img src="Images/Django.png" alt="" class="toolImg">
                     <img src="Images/GitHub.png" alt="" class="toolImg">
@@ -62,6 +65,7 @@
                     <img src="Images/SQLite.png" alt="" class="toolImg">
                     <img src="Images/Visual Studio Code (VS Code).png" alt="" class="toolImg">
                     <img src="Images/Visual Studio.png" alt="" class="toolImg">
+                    <img src="Images/XAMPP_logo.png" alt="" class="toolImg">
                 </div>
                 <!--Artist Tools-->
                 <div class="artistTools">
@@ -85,14 +89,23 @@
         <!--Software Section-->
         <section class="content" id="softwareProjects">
             <h3>Software Projects</h3>
-            
+            <p>Completion of Projects I have worked on so far:</p>
             <div class="projectContainer">
                 <!--Project Item 1-->
                 <div class="projectItem">
-                    <h4>Project Title</h4>
-                    <p>Project Description</p>
+                    <h4>Movie Finder Web App</h4>
+                    <p>The Goal of the project was to create a web application that allows users to Create, Read, 
+                        Update, and Delete (CRUD) operations on a database of movies. A key requirement was to use 
+                        a Java-based framework including a JavaBean, a JSP page, and a MySQL database as well as to only search
+                        for the movies by the ID of the movie.
+                    </p>
                     <div>
                         <p>Tools Used:</p>
+                        <img src="Images/Apache_NetBeans_Logo.svg.png" alt="" class="toolImg">
+                        <img src="Images/Java.png" alt="" class="toolImg">
+                        <img src="Images/MySQL.png" alt="" class="toolImg">
+                        <img src="Images/CSS3.png" alt="" class="toolImg">
+                        <img src="Images/HTML5.png" alt="" class="toolImg">
                     </div>
                     <!--Slide Show of Project-->
                     <div class="slideShowContainer">
@@ -100,17 +113,22 @@
                         <button class="prevBtn"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></button>
                         <!--Slide 1-->
                         <div class="individualSlide">
-                            <img src="" alt="" class="slideShowImage">
+                            <img src="Images/movieFinderIndex.png" alt="" class="slideShowImage">
                             <caption class="slideShowImageCaption"></caption>
                         </div>
                         <!--Slide 2-->
                         <div class="individualSlide">
-                            <img src="" alt="" class="slideShowImage">
+                            <img src="Images/movieFinderCreate.png" alt="" class="slideShowImage">
                             <caption class="slideShowImageCaption"></caption>
                         </div>
                         <!--Slide 3-->
                         <div class="individualSlide">
-                            <img src="" alt="" class="slideShowImage">
+                            <img src="Images/movieFinderUpdate.png" alt="" class="slideShowImage">
+                            <caption class="slideShowImageCaption"></caption>
+                        </div>
+                        <!--Slide 4-->
+                        <div class="individualSlide">
+                            <img src="Images/movieFinderDelete.png" alt="" class="slideShowImage">
                             <caption class="slideShowImageCaption"></caption>
                         </div>
                         <!--Next Button-->
