--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!--Hamburger Menu-->
-        <a> <i class="fa fa-bars"></i></a>
+        <a class="hamburgerMenu"> <i class="fa fa-bars"></i></a>
         <!--Hero Section-->
         <section class="heroSection">
 
