--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
         <!--About Section-->
         <section class="content" id="aboutSection">
-            <h3>About Me</h3>
+            <h2>About Me</h2>
             <p></p>
             <!--Tool Container-->
             <h3>Tool Box</h3>
             <div class="toolContainer">
                 <!--Software Dev Tools-->
-                <div class="softwareDevTools">
+                <div class="toolBox" id ="softwareDevTools">
                     <h4>Software Development Tools</h4>
                     <img src="Images/Apache Maven.png" alt="Apache Maven" class="toolImg">
                     <img src="Images/Apache Tomcat.png" alt="" class="toolImg">
@@ -68,7 +68,7 @@
                     <img src="Images/XAMPP_logo.png" alt="" class="toolImg">
                 </div>
                 <!--Artist Tools-->
-                <div class="artistTools">
+                <div class="toolBox" id="artistTools">
                     <h4>Artist Tools</h4>
                     <img src="Images/Adobe Illustrator.png" alt="" class="toolImg">
                     <img src="Images/Adobe Photoshop.png" alt="" class="toolImg">
@@ -77,7 +77,7 @@
                     <img src="Images/Figma.png" alt="" class="toolImg">
                 </div>
                 <!--Game Dev Tools-->
-                <div class="gameDevTools">
+                <div class="toolBox" id="gameDevTools">
                     <h4>Game Development Tools</h4>
                     <img src="Images/Godot Engine.png" alt="" class="toolImg">
                     <img src="Images/Unity.png" alt="" class="toolImg">
@@ -109,8 +109,7 @@
                     </div>
                     <!--Slide Show of Project-->
                     <div class="slideShowContainer">
-                        <!--Previous Button-->
-                        <button class="prevBtn" onclick="plusSlides(-1)"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></button>
+                      
                         <!--Slide 1-->
                         <div class="individualSlide">
                             <img src="Images/movieFinderIndex.png" alt="" class="slideShowImage">
@@ -131,6 +130,9 @@
                             <img src="Images/movieFinderDelete.png" alt="" class="slideShowImage">
                             <caption class="slideShowImageCaption"></caption>
                         </div>
+
+                        <!--Previous Button-->
+                        <button class="prevBtn" onclick="plusSlides(-1)"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></button>
                         <!--Next Button-->
                         <button class="nextBtn" onclick="plusSlides(1)"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
                     </div><!--End of slide show container-->
