--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--Hero Section-->
         <section class="heroSection">
 
-            <div class="heroLeftText">
+            <div class="heroLeftText" id = "home">
                 <h2>Hello, Hello~ My name is</h2>
                 <h1 class="knewave-regular logo">Midas</h1>
                 <h3>I am a Software Developer, 3D Designer, Inspiring Game Developer
@@ -26,8 +26,9 @@
                 </h3>
             </div>
 
-            <nav class="menu">
+            <nav class="menu frame1">
                 <h2 class="menuTitle"> Main Menu</h2>
+                <a href="#home">Home</a>
                 <a href="#aboutSection" class="menuBtn">About</a>
                 <a href="#softwareProjects" class="menuBtn">Software Projects</a>
                 <a href="#3Dprojects" class="menuBtn">3D Projects</a>
@@ -44,7 +45,7 @@
             <h3>Tool Box</h3>
             <div class="toolContainer">
                 <!--Software Dev Tools-->
-                <div class="toolBox" id ="softwareDevTools">
+                <div class="toolBox frame1" id ="softwareDevTools">
                     <h4>Software Development Tools</h4>
                     <img src="Images/Apache Maven.png" alt="Apache Maven" class="toolImg">
                     <img src="Images/Apache Tomcat.png" alt="" class="toolImg">
@@ -68,7 +69,7 @@
                     <img src="Images/XAMPP_logo.png" alt="" class="toolImg">
                 </div>
                 <!--Artist Tools-->
-                <div class="toolBox" id="artistTools">
+                <div class="toolBox frame1" id="artistTools">
                     <h4>Artist Tools</h4>
                     <img src="Images/Adobe Illustrator.png" alt="" class="toolImg">
                     <img src="Images/Adobe Photoshop.png" alt="" class="toolImg">
@@ -77,7 +78,7 @@
                     <img src="Images/Figma.png" alt="" class="toolImg">
                 </div>
                 <!--Game Dev Tools-->
-                <div class="toolBox" id="gameDevTools">
+                <div class="toolBox frame1" id="gameDevTools">
                     <h4>Game Development Tools</h4>
                     <img src="Images/Godot Engine.png" alt="" class="toolImg">
                     <img src="Images/Unity.png" alt="" class="toolImg">
@@ -92,7 +93,7 @@
             <p>Completion of Projects I have worked on so far:</p>
             <div class="projectContainer">
                 <!--Project Item 1-->
-                <div class="projectItem">
+                <div class="projectItem frame1">
                     <h4>Movie Finder Web App</h4>
                     <p>The Goal of the project was to create a web application that allows users to Create, Read, 
                         Update, and Delete (CRUD) operations on a database of movies. A key requirement was to use 
