--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <!--Project Item 1-->
                 <div class="projectItem frame1">
                     <h4>Movie Finder Web App</h4>
-                    <p>The Goal of the project was to create a web application that allows users to Create, Read, 
+                    <p><span style = "font-weight: bold;">Objective:</span> Goal of the project was to create a web application that allows users to Create, Read, 
                         Update, and Delete (CRUD) operations on a database of movies. A key requirement was to use 
                         a Java-based framework including a JavaBean, a JSP page, and a MySQL database as well as to only search
                         for the movies by the ID of the movie.
@@ -141,6 +141,12 @@
                 </div><!--End of Project Item-->
 
             </div><!--End of Project Container-->
+        </section>
+
+        <section class="content" id="3Dprojects">
+            <h3>3D Projects</h3>
+            <p>Completion of Projects I have worked on so far:</p>
+
         </section>
     </body>
     <!--Resources:-->
