--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="styles.css">
         
     </head>
-    <body>
+    <body class="wrapper">
+
         <!--Hamburger Menu-->
         <a class="hamburgerMenu"> <i class="fa fa-bars"></i></a>
         <!--Hero Section-->
@@ -95,13 +96,14 @@
                 <!--Project Item 1-->
                 <div class="projectItem frame1">
                     <h4>Movie Finder Web App</h4>
+                    <hr>
                     <p><span style = "font-weight: bold;">Objective:</span> Goal of the project was to create a web application that allows users to Create, Read, 
                         Update, and Delete (CRUD) operations on a database of movies. A key requirement was to use 
                         a Java-based framework including a JavaBean, a JSP page, and a MySQL database as well as to only search
                         for the movies by the ID of the movie.
                     </p>
                     <div>
-                        <p>Tools Used:</p>
+                        <p style = "font-weight: bold;">Tools Used:</p>
                         <img src="Images/Apache_NetBeans_Logo.svg.png" alt="" class="toolImg">
                         <img src="Images/Java.png" alt="" class="toolImg">
                         <img src="Images/MySQL.png" alt="" class="toolImg">
@@ -148,12 +150,17 @@
             <p>Completion of Projects I have worked on so far:</p>
 
         </section>
+        
     </body>
+    <canvas id="starfield"></canvas>
+
     <!--Resources:-->
     <!--Icons:-->
     <!--https://fontawesome.com/icons-->
 
     <!--Software Tech Icons:-->
     <!--https://techicons.dev/-->
+
+    <!--JavaScript File-->
     <script src="logic.js"></script>
 </html>
