--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="heroLeftText" id = "home">
                 <h2>Hello, Hello~ My name is</h2>
-                <h1 class="knewave-regular logo">Midas</h1>
+                <h1 class="knewave-regular logo">DeJanae</h1>
                 <h3>I am a Software Developer, 3D Designer, Inspiring Game Developer
                     and overall creative mind
                 </h3>
@@ -142,6 +142,10 @@
 
                 </div><!--End of Project Item-->
 
+
+
+                <!--Project Item 2-->
+                
             </div><!--End of Project Container-->
         </section>
 
