--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="toolContainer">
                 <!--Software Dev Tools-->
                 <div class="toolBox frame1" id ="softwareDevTools">
-                    <h4>Software Development Tools</h4>
+                    <h5>Software Development Tools</h5>
                     <img src="Images/Apache Maven.png" alt="Apache Maven" class="toolImg">
                     <img src="Images/Apache Tomcat.png" alt="" class="toolImg">
                     <img src="Images/Apache.png" alt="" class="toolImg">
@@ -71,7 +71,7 @@
                 </div>
                 <!--Artist Tools-->
                 <div class="toolBox frame1" id="artistTools">
-                    <h4>Artist Tools</h4>
+                    <h5>Artist Tools</h5>
                     <img src="Images/Adobe Illustrator.png" alt="" class="toolImg">
                     <img src="Images/Adobe Photoshop.png" alt="" class="toolImg">
                     <img src="Images/Blender.png" alt="" class="toolImg">
@@ -80,7 +80,7 @@
                 </div>
                 <!--Game Dev Tools-->
                 <div class="toolBox frame1" id="gameDevTools">
-                    <h4>Game Development Tools</h4>
+                    <h5>Game Development Tools</h5>
                     <img src="Images/Godot Engine.png" alt="" class="toolImg">
                     <img src="Images/Unity.png" alt="" class="toolImg">
                     <img src="Images/Unreal Engine.png" alt="" class="toolImg">
@@ -91,11 +91,11 @@
         <!--Software Section-->
         <section class="content" id="softwareProjects">
             <h3>Software Projects</h3>
-            <p>Completion of Projects I have worked on so far:</p>
+            <h4>Completion of Projects I have worked on so far:</h4>
             <div class="projectContainer">
                 <!--Project Item 1-->
                 <div class="projectItem frame1">
-                    <h4>Movie Finder Web App</h4>
+                    <h5>Movie Finder Web App</h5>
                     <hr>
                     <p><span style = "font-weight: bold;">Objective:</span> Goal of the project was to create a web application that allows users to Create, Read, 
                         Update, and Delete (CRUD) operations on a database of movies. A key requirement was to use 
@@ -151,7 +151,7 @@
 
         <section class="content" id="3Dprojects">
             <h3>3D Projects</h3>
-            <p>Completion of Projects I have worked on so far:</p>
+            <h4>Completion of Projects I have worked on so far:</h4>
 
         </section>
         
